# qa_guru_5_20

./: pyproject.toml
tests/: conftest.py
tests/create_user/: test_create_user.py
tests/list_unknown_resource/: test_list_unknown_resource.py
tests/list_users/: test_list_users.py
tests/single_user/: test_single_user.py
tests/single_user_not_found/: test_single_user_not_found.py
